[gd_scene load_steps=30 format=3 uid="uid://c6ovtpkrinc5c"]

[ext_resource type="Script" path="res://motor/motor_3coils.gd" id="1_7ess8"]
[ext_resource type="Script" path="res://motor/rotor_3coils.gd" id="1_bdl1u"]
[ext_resource type="Script" path="res://motor/dummy_mass.gd" id="2_wj4rr"]
[ext_resource type="PackedScene" uid="uid://bp3aw7xry5q5f" path="res://motor/models/motor_rotor.glb" id="3_c3a4l"]
[ext_resource type="Material" uid="uid://bdli3qr7p14al" path="res://motor/models/materials/Base.tres" id="4_oaxai"]
[ext_resource type="PackedScene" uid="uid://cd7rvdxng5xh0" path="res://motor/models/motor_body.glb" id="4_r0s45"]
[ext_resource type="Material" uid="uid://b67owg8bqqs5g" path="res://motor/models/materials/Axis.tres" id="5_sghd7"]
[ext_resource type="Material" uid="uid://c01g0qspjgyx4" path="res://motor/models/materials/Wire.tres" id="6_jjw41"]
[ext_resource type="Material" uid="uid://ingfs852fulc" path="res://motor/models/materials/Box.tres" id="8_mugka"]
[ext_resource type="Material" uid="uid://rak1la478ewu" path="res://motor/models/materials/Magnet.tres" id="9_fljq6"]
[ext_resource type="Material" uid="uid://c4chafnr2vwgs" path="res://motor/models/materials/Cover.tres" id="10_dvtja"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_gggrg"]
radius = 1.0

[sub_resource type="CylinderMesh" id="CylinderMesh_l1xxa"]
top_radius = 1.0
bottom_radius = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_saddr"]
radius = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4u5dy"]

[sub_resource type="SphereMesh" id="SphereMesh_4dg4s"]
material = SubResource("StandardMaterial3D_4u5dy")
radius = 0.1
height = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tagwh"]

[sub_resource type="SphereMesh" id="SphereMesh_v3otn"]
material = SubResource("StandardMaterial3D_tagwh")
radius = 0.1
height = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4jhrp"]

[sub_resource type="SphereMesh" id="SphereMesh_0f3xq"]
material = SubResource("StandardMaterial3D_4jhrp")
radius = 0.1
height = 0.2

[sub_resource type="CylinderShape3D" id="CylinderShape3D_d37ol"]
height = 6.0
radius = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cxwkl"]
albedo_color = Color(0.501961, 0.501961, 0.501961, 1)
metallic = 1.0
roughness = 0.34

[sub_resource type="CylinderMesh" id="CylinderMesh_kt6vc"]
material = SubResource("StandardMaterial3D_cxwkl")
top_radius = 0.1
bottom_radius = 0.1
height = 3.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_twcuy"]
height = 5.0
radius = 1.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xwafi"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_nn4cp"]
material = SubResource("StandardMaterial3D_xwafi")
size = Vector3(0.1, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jtf5g"]
albedo_color = Color(0, 0, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_bjlnj"]
material = SubResource("StandardMaterial3D_jtf5g")
size = Vector3(0.1, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_qd3ga"]
size = Vector3(2.5, 2.5, 4.5)

[node name="Motor" type="RigidBody3D"]
script = ExtResource("1_7ess8")
my_collision_exceptions = Array[NodePath]([NodePath("rotor_3coils"), NodePath("Axis")])
metadata/_edit_group_ = true

[node name="rotor_3coils" type="RigidBody3D" parent="."]
mass = 0.1
inertia = Vector3(1, 1, 1)
script = ExtResource("1_bdl1u")
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="rotor_3coils"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_gggrg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="rotor_3coils"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
visible = false
mesh = SubResource("CylinderMesh_l1xxa")

[node name="DummyMass1" type="RigidBody3D" parent="rotor_3coils"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.06152e-17, 0.5, 0)
collision_layer = 2
collision_mask = 2
can_sleep = false
script = ExtResource("2_wj4rr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="rotor_3coils/DummyMass1"]
shape = SubResource("SphereShape3D_saddr")

[node name="MeshInstance3D" type="MeshInstance3D" parent="rotor_3coils/DummyMass1"]
visible = false
mesh = SubResource("SphereMesh_4dg4s")

[node name="DummyMass2" type="RigidBody3D" parent="rotor_3coils"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.433013, -0.25, 0)
collision_layer = 2
collision_mask = 2
gravity_scale = -1.0
can_sleep = false
script = ExtResource("2_wj4rr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="rotor_3coils/DummyMass2"]
shape = SubResource("SphereShape3D_saddr")

[node name="MeshInstance3D" type="MeshInstance3D" parent="rotor_3coils/DummyMass2"]
visible = false
mesh = SubResource("SphereMesh_v3otn")
skeleton = NodePath("../../DummyMass1")

[node name="DummyMass3" type="RigidBody3D" parent="rotor_3coils"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.433013, -0.25, 0)
collision_layer = 2
collision_mask = 2
can_sleep = false
script = ExtResource("2_wj4rr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="rotor_3coils/DummyMass3"]
shape = SubResource("SphereShape3D_saddr")

[node name="MeshInstance3D" type="MeshInstance3D" parent="rotor_3coils/DummyMass3"]
visible = false
mesh = SubResource("SphereMesh_0f3xq")

[node name="motor_rotor" parent="rotor_3coils" instance=ExtResource("3_c3a4l")]
transform = Transform3D(-1.09278e-08, 0, -0.25, 0, 0.25, 0, 0.25, 0, -1.09278e-08, 0, 0, 0)

[node name="Rotor" parent="rotor_3coils/motor_rotor" index="0"]
surface_material_override/0 = ExtResource("4_oaxai")

[node name="Axis" parent="rotor_3coils/motor_rotor" index="1"]
surface_material_override/0 = ExtResource("5_sghd7")

[node name="CoilRod" parent="rotor_3coils/motor_rotor" index="2"]
surface_material_override/0 = ExtResource("4_oaxai")

[node name="Coil" parent="rotor_3coils/motor_rotor" index="3"]
surface_material_override/0 = ExtResource("6_jjw41")

[node name="AxisRod" parent="rotor_3coils/motor_rotor" index="5"]
surface_material_override/0 = ExtResource("5_sghd7")

[node name="Commutator" parent="rotor_3coils/motor_rotor" index="6"]
surface_material_override/0 = ExtResource("6_jjw41")

[node name="HingeJoint3D1" type="HingeJoint3D" parent="rotor_3coils"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.06152e-17, 0.5, 0)
node_a = NodePath("..")
node_b = NodePath("../DummyMass1")
params/bias = 0.99
angular_limit/enable = true
angular_limit/upper = 0.0
angular_limit/lower = 0.0

[node name="HingeJoint3D2" type="HingeJoint3D" parent="rotor_3coils"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.433013, -0.25, 0)
node_a = NodePath("..")
node_b = NodePath("../DummyMass2")
params/bias = 0.99
angular_limit/enable = true
angular_limit/upper = 0.0
angular_limit/lower = 0.0

[node name="HingeJoint3D3" type="HingeJoint3D" parent="rotor_3coils"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.433013, -0.25, 0)
node_a = NodePath("..")
node_b = NodePath("../DummyMass3")
params/bias = 0.99
angular_limit/enable = true
angular_limit/upper = 0.0
angular_limit/lower = 0.0

[node name="Axis" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.25)
mass = 0.1
inertia = Vector3(1, 1, 1)
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Axis"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_d37ol")

[node name="HingeJoint3D" type="HingeJoint3D" parent="Axis"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.25)
node_a = NodePath("..")
node_b = NodePath("../../rotor_3coils")
params/bias = 0.99
angular_limit/enable = true
angular_limit/upper = 0.0
angular_limit/lower = 0.0
angular_limit/softness = 0.01

[node name="MeshInstance3D" type="MeshInstance3D" parent="Axis"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
visible = false
mesh = SubResource("CylinderMesh_kt6vc")

[node name="N" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.15, 0, 0)
collision_layer = 2
collision_mask = 2
gravity_space_override = 1
gravity_point = true
gravity_point_unit_distance = 1.0
gravity_point_center = Vector3(0, 0, 0)
gravity_direction = Vector3(0, 0, 0)
gravity = -1.0
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="N"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_twcuy")

[node name="MeshInstance3D" type="MeshInstance3D" parent="N"]
visible = false
mesh = SubResource("BoxMesh_nn4cp")

[node name="S" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.15, 0, 0)
collision_layer = 2
collision_mask = 2
gravity_space_override = 1
gravity_point = true
gravity_point_unit_distance = 1.0
gravity_point_center = Vector3(0, 0, 0)
gravity_direction = Vector3(0, 0, 0)
gravity = 1.0
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="S"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_twcuy")

[node name="MeshInstance3D" type="MeshInstance3D" parent="S"]
visible = false
mesh = SubResource("BoxMesh_bjlnj")
skeleton = NodePath("../../N")

[node name="motor_body" parent="." instance=ExtResource("4_r0s45")]
transform = Transform3D(-1.09278e-08, 0, -0.25, 0, 0.25, 0, 0.25, 0, -1.09278e-08, 0, 0, 0)

[node name="Box-bottom" parent="motor_body" index="0"]
surface_material_override/0 = ExtResource("8_mugka")

[node name="Terminal" parent="motor_body" index="2"]
surface_material_override/0 = ExtResource("8_mugka")

[node name="Magnet" parent="motor_body" index="3"]
surface_material_override/0 = ExtResource("9_fljq6")

[node name="Brush" parent="motor_body" index="4"]
surface_material_override/0 = ExtResource("8_mugka")

[node name="Box_cover" parent="motor_body" index="5"]
surface_material_override/0 = ExtResource("10_dvtja")

[node name="Box-top" parent="motor_body" index="6"]
visible = false
surface_material_override/0 = ExtResource("8_mugka")

[node name="Torus" parent="motor_body" index="7"]
surface_material_override/0 = ExtResource("8_mugka")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.25)
shape = SubResource("BoxShape3D_qd3ga")

[node name="HingeJoint3D" type="HingeJoint3D" parent="."]
node_a = NodePath("..")
node_b = NodePath("../rotor_3coils")
params/bias = 0.99

[editable path="rotor_3coils/motor_rotor"]
[editable path="motor_body"]
